# tomato25Ateam

./: .gitignore  README.md
dynamixelcontrol/: CMakeLists.txt  package.xml
dynamixelcontrol/include/DynamixelControl/: AXMotor.h  DynamixelControl.h  MXMotor.h  Motor.h
dynamixelcontrol/launch/: ax_pos_class_test.launch  dxcontrol_test.launch  follow.launch  mx_vel_class_test.launch  param.launch  real.launch
dynamixelcontrol/src/: class_test_ax.cpp  class_test_mx.cpp  dxcontrol_test.cpp  param.cpp  param2.cpp
dynamixelcontrol/src/DynamixelControl/: AXMotor.cpp  DynamixelControl.cpp  MXMotor.cpp  Motor.cpp
tomato_arm_ik/: CMakeLists.txt  README.md  package.xml
tomato_arm_ik/config/: arm_display.rviz
tomato_arm_ik/launch/: arm_ik.launch  arm_ik_joy.launch  crane_joy.launch
tomato_arm_ik/src/: arm_ik.cpp  arm_ik.h  arm_ik_joy.cpp  crane_control.cpp
tomato_arm_ik/urdf/: arm.urdf
tomato_dynamixel/: CMakeLists.txt  README.md  package.xml
tomato_dynamixel/Include/DynamixelControl/: AXMotor.h  DynamixelControl.h  MXMotor.h  Motor.h
tomato_dynamixel/launch/: ax_double_pos.launch  ax_mx.launch  ax_pos.launch  ax_pos_class_test.launch  joy_ax.launch  joy_ax_mx.launch  mx_pos.launch  mx_vel_class_test.launch  xc_pos.launch
tomato_dynamixel/src/: ax_double_pos.cpp  ax_joy.cpp  ax_mx_joy.cpp  ax_pos.cpp  class_test_ax.cpp  class_test_mx.cpp  mx_pos.cpp  xc_pos.cpp
tomato_dynamixel/src/DynamixelControl/: AXMotor.cpp  DynamixelControl.cpp  MXMotor.cpp
tomato_joycon/: CMakeLists.txt  README.md  package.xml
tomato_joycon/launch/: joy_communication.launch
tomato_joycon/src/: joy_listener.cpp
tomato_kobuki/include/kobuki_operation/: kobuki_operation.hpp
tomato_kobuki/kobuki/: install_basic.sh
tomato_kobuki/launch/: tomato_cam.launch  tomato_kobuki_joy.launch
tomato_kobuki/src/: kobuki_operation(my).cpp  kobuki_operation.cpp
tomato_kobuki/tomato_kobuki/include/kobuki_operation/: kobuki_operation.hpp
tomato_kobuki/tomato_kobuki/src/: kobuki_operation.cpp
tomato_pubsub/: CMakeLists.txt  README.md  package.xml
tomato_pubsub/launch/: communication.launch
tomato_pubsub/src/: listener.cpp  talker.cpp
yolo_detection/: CMakeLists.txt  package.xml
yolo_detection/launch/: bbox_detection.launch  fast_tomato_detection.launch  tomato_detection.launch  yolo_detection.launch
yolo_detection/msg/: BoundingBox.msg
yolo_detection/scripts/: enhanced_tomato_detector.py  optimized_tomato_detector.py  realsense_tomato_detector.py  yolo_detector'.py  yolo_detector.py  yolov8_bbox_publisher.py
yolo_detection/src/: bbox_listener_node.cpp  bounding_box_listener.cpp
