<?xml version="1.0"?>
<package format="2">
  <name>tomato_dynamixel</name>
  <version>1.0.0</version>
  <description>The tomato_dynamixel package</description>

  <maintainer email="nagano@mech.kobe-u.ac.jp">nagano</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <build_export_depend>dynamixel_sdk</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  <export>
  </export>
</package>
